--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "1.6.0",
     "finalhandler": "0.5.0",
     "minimist": "1.2.0",
-    "serve-static": "1.11.1"
+    "serve-static": "1.11.1",
+    "ws": "1.1.1"
   }
 }
