--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -2,7 +2,7 @@
   "name": "wright-example-simple",
   "version": "1.0.0",
   "scripts": {
-    "html": "node ../../bin/wright -d -r \"window.reload()\" index.html",
-    "app": "node ../../bin/wright -d -r \"window.reload()\" js/app.js"
+    "html": "node ../../bin/wright -r \"window.reload()\" index.html",
+    "files": "node ../../bin/wright -r \"window.reload()\" js/app.js css/style.css"
   }
 }
