--- a/examples/rollup/package.json
+++ b/examples/rollup/package.json
@@ -2,7 +2,7 @@
   "name": "wright-example-rollup",
   "version": "1.0.0",
   "scripts": {
-    "start": "node wright.js"
+    "wright": "node wright.js"
   },
   "dependencies": {
     "rollup": "0.34.1"
