--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "preferGlobal": true,
   "scripts": {
-    "try:rollup": "cd examples/rollup && npm install && node wright",
-    "try:mithril": "cd examples/mithril && npm install && node wright",
-    "try:simple": "cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
+    "try:rollup": "npm install && cd examples/rollup && npm install && node wright",
+    "try:mithril": "npm install && cd examples/mithril && npm install && node wright",
+    "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
+  },
+  "bugs": {
+    "url": "https://github.com/porsager/primus-requests/issues"
+  },
+  "homepage": "https://github.com/porsager/primus-requests#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/porsager/primus-requests.git"
   },
   "dependencies": {
     "chokidar": "1.6.0",
