--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "chokidar": "1.6.0",
+    "escodegen": "1.8.1",
+    "esprima": "3.0.0",
     "finalhandler": "0.5.0",
     "minimist": "1.2.0",
     "serve-static": "1.11.1",
