--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -2,9 +2,13 @@
   "name": "wright-example-mithril",
   "version": "1.0.0",
   "scripts": {
-    "start": "node wright.js"
+    "rollup": "node rollup.js",
+    "browserify": "node browserify.js",
   },
   "devDependencies": {
+    "babel-preset-es2015": "6.14.0",
+    "babelify": "7.3.0",
+    "browserify": "13.1.0",
     "mithril": "lhorie/mithril.js#8c5b5c7f30bd7e4945e6b0c57348ec4a65c27879",
     "rollup": "0.34.1",
     "rollup-plugin-commonjs": "3.3.1",
