--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "preferGlobal": true,
   "scripts": {
     "try:rollup": "npm install && cd examples/rollup && npm install && node wright",
-    "try:mithril": "npm install && cd examples/mithril && npm install && node wright",
+    "try:mithril": "npm install && cd examples/mithril && npm install && node rollup",
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
   },
   "bugs": {
