--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -12,6 +12,8 @@
     "mithril": "lhorie/mithril.js#8c5b5c7f30bd7e4945e6b0c57348ec4a65c27879",
     "rollup": "0.34.1",
     "rollup-plugin-commonjs": "3.3.1",
-    "rollup-plugin-node-resolve": "2.0.0"
+    "rollup-plugin-node-resolve": "2.0.0",
+    "webpack": "1.13.2",
+    "babel-loader": "6.2.5"
   }
 }
