--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "escodegen": "1.8.1",
     "esprima": "3.0.0",
     "finalhandler": "0.5.0",
+    "http-proxy": "1.15.1",
     "minimist": "1.2.0",
     "serve-static": "1.11.1",
     "ws": "1.1.1"
