--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "rollup": "node rollup.js",
-    "browserify": "node browserify.js",
-    "webpack": "node webpack.js"
+    "browserify": "node browserify.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "6.14.0",
