--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
   },
   "bugs": {
-    "url": "https://github.com/porsager/primus-requests/issues"
+    "url": "https://github.com/porsager/wright/issues"
   },
-  "homepage": "https://github.com/porsager/primus-requests#readme",
+  "homepage": "https://github.com/porsager/wright#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/porsager/primus-requests.git"
+    "url": "git+https://github.com/porsager/wright.git"
   },
   "dependencies": {
     "astring": "0.8.0",
