--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "esprima": "3.0.0",
     "finalhandler": "0.5.0",
     "http-proxy": "1.16.2",
+    "inquirer": "3.0.1",
     "minimist": "1.2.0",
     "serve-static": "1.11.1",
     "ws": "1.1.1"
