--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http-proxy": "1.16.2",
     "inquirer": "3.0.6",
     "minimist": "1.2.0",
+    "pws": "0.4.0",
     "serve-static": "1.12.3",
     "ws": "2.3.1"
   }
