--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "scripts": {
     "rollup": "node rollup.js",
-    "browserify": "node browserify.js"
+    "browserify": "node browserify.js",
+    "webpack": "node webpack.js"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "6.14.0",
     "babelify": "7.3.0",
     "browserify": "13.1.0",
+    "memory-fs": "^0.4.1",
     "mithril": "1.0.1",
     "rollup": "0.34.1",
     "rollup-plugin-commonjs": "3.3.1",
     "rollup-plugin-node-resolve": "2.0.0",
-    "webpack": "1.13.2",
-    "babel-loader": "6.2.5"
+    "webpack": "3.6.0"
   }
 }
