--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
@@ -15,14 +15,7 @@
     "try:mithril": "npm install && cd examples/mithril && npm install && node rollup",
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
   },
-  "bugs": {
-    "url": "https://github.com/porsager/wright/issues"
-  },
-  "homepage": "https://github.com/porsager/wright#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/porsager/wright.git"
-  },
+  "repository": "porsager/wright",
   "dependencies": {
     "astring": "1.2.0",
     "chokidar": "2.0.2",
