--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "1.2.5",
+  "version": "2.0.0-alpha2",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
@@ -10,6 +10,7 @@
   },
   "preferGlobal": true,
   "scripts": {
+    "build": "rollup -c",
     "try:rollup": "npm install && cd examples/rollup && npm install && node wright",
     "try:mithril": "npm install && cd examples/mithril && npm install && node rollup",
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
@@ -19,10 +20,20 @@
     "chokidar": "2.0.4",
     "finalhandler": "1.1.1",
     "http-proxy": "1.17.0",
-    "inquirer": "6.0.0",
+    "inquirer": "6.2.0",
     "minimist": "1.2.0",
-    "pws": "1.0.2",
     "serve-static": "1.13.2",
-    "ws": "6.0.0"
+    "source-map": "0.7.3",
+    "ws": "6.1.2",
+    "pws": "1.0.2",
+    "ubre": "0.0.3"
+  },
+  "devDependencies": {
+    "bss": "1.3.0",
+    "mithril": "1.1.6",
+    "rollup": "0.67.3",
+    "rollup-plugin-buble": "0.19.4",
+    "rollup-plugin-commonjs": "8.4.1",
+    "rollup-plugin-node-resolve": "3.4.0"
   }
 }
