--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "2.0.0-alpha2",
+  "version": "2.0.0-alpha6",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
@@ -11,6 +11,7 @@
   "preferGlobal": true,
   "scripts": {
     "build": "rollup -c",
+    "prepublishOnly": "npm run build",
     "try:rollup": "npm install && cd examples/rollup && npm install && node wright",
     "try:mithril": "npm install && cd examples/mithril && npm install && node rollup",
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html"
@@ -24,13 +25,13 @@
     "minimist": "1.2.0",
     "serve-static": "1.13.2",
     "source-map": "0.7.3",
-    "ws": "6.1.2",
-    "pws": "1.0.2",
-    "ubre": "0.0.3"
+    "ubre": "0.0.7",
+    "ws": "6.1.2"
   },
   "devDependencies": {
     "bss": "1.3.0",
     "mithril": "1.1.6",
+    "pws": "2.0.0",
     "rollup": "0.67.3",
     "rollup-plugin-buble": "0.19.4",
     "rollup-plugin-commonjs": "8.4.1",
