--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "2.0.0-alpha6",
+  "version": "2.0.0-beta",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
@@ -20,6 +20,7 @@
   "dependencies": {
     "chokidar": "2.0.4",
     "finalhandler": "1.1.1",
+    "fs-extra": "7.0.1",
     "http-proxy": "1.17.0",
     "inquirer": "6.2.1",
     "minimist": "1.2.0",
