--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "2.0.0-beta",
+  "version": "2.0.0-beta3",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
