--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wright",
-  "version": "2.0.0-beta6",
+  "version": "2.0.0-beta11",
   "description": "",
   "author": "Rasmus Porsager <rasmus@porsager.com>",
   "license": "WTFPL",
@@ -19,6 +19,7 @@
   "repository": "porsager/wright",
   "dependencies": {
     "chokidar": "2.0.4",
+    "dotenv": "6.2.0",
     "finalhandler": "1.1.1",
     "fs-extra": "7.0.1",
     "http-proxy": "1.17.0",
