--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -7,17 +7,17 @@
     "webpack": "node webpack.js"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "6.14.0",
-    "babelify": "7.3.0",
-    "browserify": "13.1.0",
-    "memory-fs": "^0.4.1",
-    "mithril": "2.0.0-rc.3",
-    "rollup": "0.34.1",
-    "rollup-plugin-commonjs": "3.3.1",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "webpack": "3.6.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babelify": "10.0.0",
+    "browserify": "16.5.1",
+    "memory-fs": "^0.5.0",
+    "mithril": "2.0.4",
+    "rollup": "2.7.6",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "webpack": "4.43.0"
   }
 }
