--- a/examples/mithril/package.json
+++ b/examples/mithril/package.json
@@ -1,23 +1,7 @@
 {
   "name": "wright-example-mithril",
   "version": "1.0.0",
-  "scripts": {
-    "rollup": "node rollup.js",
-    "browserify": "node browserify.js",
-    "webpack": "node webpack.js"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babelify": "10.0.0",
-    "browserify": "17.0.0",
-    "memory-fs": "^0.5.0",
-    "mithril": "2.0.4",
-    "rollup": "2.36.1",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "webpack": "5.12.1"
+  "dependencies": {
+    "mithril": "github:porsager/mithril.js#esm-dev"
   }
 }
