--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
     "try:rollup": "npm install && cd examples/rollup && npm install && node wright",
-    "try:mithril": "npm install && cd examples/mithril && npm install && node rollup",
+    "try:mithril": "npm install && cd examples/mithril && npm install && wright -r 'm.redraw' index.html",
     "try:simple": "npm install && cd examples/simple && node ../../bin/wright -r \"window.reload()\" index.html",
     "test": "tape test/**"
   },
